--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "@sentry/typescript": "^4.0.0-beta.12",
+        "@sentry/typescript": "^3.2.0",
         "@types/ini": "^1.3.29",
         "@types/mocha": "^2.2.42",
         "@types/node": "^7.0.43",
