--- a/package.json
+++ b/package.json
@@ -90,20 +90,23 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "@sentry/typescript": "^3.2.0",
-        "@types/ini": "^1.3.29",
-        "@types/mocha": "^2.2.42",
-        "@types/node": "^7.0.43",
-        "@types/util.promisify": "^1.0.0",
-        "tslint": "^5.8.0",
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6"
+        "@sentry/typescript": "^5.20.1",
+        "@types/ini": "^4.1.1",
+        "@types/mocha": "^10.0.10",
+        "@types/node": "^22.14.1",
+        "@types/util.promisify": "^1.0.9",
+        "@typescript-eslint/eslint-plugin": "^8.30.1",
+        "@typescript-eslint/parser": "^8.30.1",
+        "eslint": "^9.24.0",
+        "tslint": "^6.1.3",
+        "typescript": "^5.8.3",
+        "vscode": "^1.1.37"
     },
     "dependencies": {
-        "ini": "^1.3.5",
-        "request-light": "^0.2.3",
-        "util.promisify": "^1.0.0",
-        "vscode-debugadapter": "1.27.0",
-        "vscode-debugprotocol": "1.27.0"
+        "ini": "^5.0.0",
+        "request-light": "^0.8.0",
+        "util.promisify": "^1.1.3",
+        "vscode-debugadapter": "1.51.0",
+        "vscode-debugprotocol": "1.51.0"
     }
 }
