--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "publisher": "Sentry",
     "license": "MIT",
     "engines": {
-        "vscode": "^1.99.3"
+        "vscode": "^1.80.0"
     },
     "categories": [
         "Other"
@@ -86,8 +86,9 @@
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+        "lint": "eslint 'src/**/*.ts'",
+        "test": "npm run compile && node ./node_modules/@vscode/test-electron/out/test",
+        "bundle": "webpack --mode production"
     },
     "devDependencies": {
         "@sentry/typescript": "^5.20.1",
@@ -95,15 +96,17 @@
         "@types/mocha": "^10.0.10",
         "@types/node": "^22.14.1",
         "@types/util.promisify": "^1.0.9",
+        "@types/vscode": "^1.80.0",
         "@typescript-eslint/eslint-plugin": "^8.30.1",
         "@typescript-eslint/parser": "^8.30.1",
         "eslint": "^9.24.0",
-        "tslint": "^6.1.3",
         "typescript": "^5.8.3",
-        "vscode": "^1.1.34"
+        "vscode-test": "^1.6.0"
     },
     "dependencies": {
+        "glob": "^11.0.1",
         "ini": "^5.0.0",
+        "mocha": "^11.1.0",
         "request-light": "^0.8.0",
         "util.promisify": "^1.1.3",
         "vscode-debugadapter": "1.51.0",
