--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "Other"
     ],
     "activationEvents": [
-        "*"
+        "onLanguage:python"
     ],
     "main": "./out/extension",
     "contributes": {
